# ton

./: ADVANCED_ARCHIVE_RECOVERY_v2.md  ARCHIVE_DOWNLOAD_OPTIMIZATION.md  DEPLOYMENT_INSTRUCTIONS.md  QUICK_START_優化版本.md  README-監控工具使用說明.md  README.md  SMART_EXPLORE_EXPLOIT_優化版本.md  TonNodeHealthCheck.cpp  analyze-node-logs.sh  check_network_status.sh  check_version.cpp  monitor-download-performance.sh  node-performance-dashboard.sh  optimize-archive-download.sh  run-tests-update.md
.github/workflows/: sync-upstream.yml
: utils/: check_env.sh
CMake/: CheckMacOSArch.cmake
common/: log_extended.cpp
crypto/: CMakeLists.txt
dht-server/: CMakeLists.txt
docs/: BUILD_QUICK_START.md  BUILD_UBUNTU.md  QUICK_START.md  run_tests_guide.md
example/: run-lite-client-testnet.sh
lite-client/: CMakeLists.txt
rldp-http-proxy/: CMakeLists.txt
storage/storage-daemon/: CMakeLists.txt
test/: run-tests-note.md
validator/: full-node-shard.cpp
validator/db/: celldb.cpp
validator/downloaders/: wait-block-state.cpp
validator/net/: download-archive-slice-enhanced.cpp  download-archive-slice-optimized.cpp  download-archive-slice-optimized.hpp  download-archive-slice.cpp
